--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gen:manifest": "node ./generate-manifest.js"
   },
   "devDependencies": {
+    "@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.56",
     "@sveltejs/amp": "1.0.0-next.1",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/typography": "^0.5.7",
